--- a/ScrollingText/app/src/main/res/values/strings.xml
+++ b/ScrollingText/app/src/main/res/values/strings.xml
@@ -1,45 +1,6 @@
 <resources>
     <string name="app_name">Scrolling Text</string>
     <string name="article_title">Androidão team bio</string>
-    <string name="article_subtitle">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</string>
-    <string name="article_text">
-        <b>Text generated from\:</b> www.lipsum.com/feed/html
-        \n\n
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed velporta nulla. Proin
-        imperdiet dolor metus. Nulla gravida odio at enim tincidunt, a ornareodio iaculis.
-        Quisque et turpis velit. Quisque quis faucibus odio. Pellentesque id ligula
-        vitae eros interdum ornare. Sed finibus facilisis risus. Etiam aliquam iaculis orci.
-        Pellentesque tincidunt tellus ac vehicula posuere. Maecenas et erat tristique, varius
-        ante nec, rhoncus tortor. Vestibulum nec nibh libero. Fusce eleifend eu nibh sit amet
-        pellentesque.
-        \n\n
-        <i>Nunc at lorem vehicula, scelerisque nisl a, eleifend risus. Suspendisse malesuada gravida
-        tellus quis viverra. Phasellus in ante vulputate, fringilla arcu eget, varius libero.
-        In vestibulum egestas sem. Nullam justo tortor, vestibulum in sagittis nec, iaculis
-        quis ante. Mauris feugiat elementum velit, vitae porta sapien consequat at. Aliquam in
-        semper dui. Praesent sed nibh vulputate, volutpat leo vitae, facilisis tellus.</i>
-        \n\n
-        Sed tortor orci, varius at mattis ut, laoreet cursus nunc. Donec efficitur ligula et
-        mi sodales, quis tincidunt quam dictum. Integer auctor, ligula ut semper accumsan, nibh
-        lorem sodales leo, ac rhoncus lacus ante a mauris. Integer iaculis tellus tellus, in
-        sodales est cursus eget. Mauris rutrum a purus congue ornare. Vivamus volutpat ligula
-        sollicitudin, volutpat enim quis, condimentum metus. Integer porta porta augue, at
-        interdum orci congue non. <b><i>Suspendisse in ornare augue.</i></b> Morbi elit dui, suscipit et
-        diam non, aliquet maximus odio. Etiam suscipit bibendum libero nec elementum.
-        Morbi mollis sollicitudin magna, ut rhoncus dui ullamcorper sed.
-        \n\n
-        Sed eget tortor tempus velit imperdiet sagittis ac sit amet tellus. Vivamus egestas et
-        dolor et blandit. Praesent interdum felis sem, nec mattis libero dictum nec. Donec vel
-        mauris quis nisl sagittis tempus vel a augue. Aenean et fringilla odio. Vivamus augue
-        sapien, suscipit ac orci at, finibus gravida tellus. Fusce arcu orci, iaculis vitae varius
-        non, cursus id orci. Vestibulum at finibus velit, ut venenatis ex.
-        \n\n
-        Maecenas eget laoreet eros, eu tempus mauris. Ut at tortor sed felis aliquam congue vel
-        venenatis ipsum. Ut tristique magna ac consectetur tempus. Nullam at pellentesque nulla,
-        ac luctus enim. Nam quis mauris mattis, viverra purus vitae, elementum arcu. Nullam eu
-        metus nibh. Morbi sodales nisl et congue fermentum. Ut sagittis a est eget luctus.
-        Pellentesque suscipit non tellus in luctus.
-    </string>
     <string name="gabriel_name">Gabriel Fernandes de Oliveira</string>
     <string name="gabriel_bio">
         <b>Gabriel</b> is brazilian, 21 years old, studies Computer Science at the university
@@ -61,6 +22,22 @@
         pop and even, <i>who would have thought</i>, musical theater soundtracks.
         \n\n
         Link to Gabriel\'s github: github.com/gafeol.
+    </string>
+    <string name="ivan_name">Ivan Fontana</string>
+    <string name="ivan_bio">
+        Born and raised in Switzerland, in the beautiful Ascona in Ticino.
+        He is also half Brazilian on the mother\'s side. 23 years old and has
+        just begun his first semester of master\'s degree in AI at USI.
+        \n\n
+        He began his career as an electronic apprentice then after that and after a
+        year of military service he went to Biel in the canton of Bern.
+        There he spend 3 years for achieving his Bachelor\'s degree in Microtechnology,
+        specialised in robotics, sensors and management.
+        \n\n
+        During his free time, he practice sports (Unihockey and gym), read books, learn to play the ukulele and spend time with friends and family. In winter he likes also to go skiing or snowboarding.
+        His particular interests are computer programming, psychology, management and business.
+        \n\n
+        Link to Ivan\’s github: github.com/fonticode.
     </string>
     <string name="pedro_name">Pedro Henrique Barbosa de Almeida</string>
     <string name="pedro_bio">
