add pre-release version

--- a/ShoppingList/app/src/main/res/values/strings.xml
+++ b/ShoppingList/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="button2_text">Tomato</string>
     <string name="button3_text">Potato</string>
     <string name="button4_text">Chicken</string>
-    <string name="button5_text">Meat</string>
+    <string name="button5_text">Truffle</string>
     <string name="button6_text">Bread</string>
     <string name="button7_text">Sugar</string>
     <string name="button8_text">BBQ Sauce</string>
